--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ VITE_API_BASE_URL=https://<backend-integracion>/api
 VITE_AUTH_URL=https://<backend-integracion>/api/auth
 VITE_CATALOG_URL=https://<backend-integracion>/api/libros
 VITE_LOANS_URL=https://<backend-integracion>/api/prestamos
+VITE_API_BASE_URL=https://backend-domain/api
